Anatomy debug renderer, properer attachment points